# Monparser

./: dune-project  monparser.opam
lib/: dune  monad.ml  monparser.ml
test/: dune
